HelloUltraviolet/Fixtures/RejectedSource/Statements/UsingLocalUnresolved/Expected.uv
//! Expected diagnostic metadata for the UsingLocalUnresolved rejected-source specimen.

expectedDiagnostic("E-MOD-1301", "rule.18.T-UsingLocalStmt-Err")
